--- a/.gitignore
+++ b/.gitignore
@@ -39,6 +39,7 @@ lerna-debug.log*
 .env
 .env.development.local
 .env.test.local
+.env.test
 .env.production.local
 .env.local
 
@@ -54,3 +55,6 @@ pids
 
 # Diagnostic reports (https://nodejs.org/api/report.html)
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
+
+#docker
+.docker/dbdata/*
