ci: ignorando a etapa de testes até houver algum teste na API

--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -21,5 +21,5 @@ jobs:
     - name: Rodar o ESLint
       run: npm run lint
 
-    - name: Rodar os testes unitários
-      run: npm run test
+    #- name: Rodar os testes unitários
+    #  run: npm run test
