feat: adding graphql lib

--- a/package.json
+++ b/package.json
@@ -22,12 +22,16 @@
     "test:prisma-migrate": "npx dotenv-cli -e .env.test -- npx prisma migrate deploy"
   },
   "dependencies": {
+    "@apollo/server": "^4.12.2",
+    "@nestjs/apollo": "^13.1.0",
     "@nestjs/common": "^11.0.1",
     "@nestjs/config": "^4.0.0",
     "@nestjs/core": "^11.0.1",
+    "@nestjs/graphql": "^13.1.0",
     "@nestjs/platform-express": "^11.0.1",
     "@prisma/client": "^6.14.0",
     "dotenv-cli": "^10.0.0",
+    "graphql": "^16.11.0",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1"
   },
